feat: create filtering movie by genre
