# routers/historyRoute.go
@@ -2,12 +2,14 @@ package routers
 
 import (
 	"weeklytickits/controller"
+	"weeklytickits/middleware"
 
 	"github.com/gin-gonic/gin"
 )
 
 func historyRoute(r *gin.RouterGroup) {
-	r.GET("", controller.GetHistory)
-	r.PATCH("/:id", controller.UpdateHistory)
+	r.GET("", middleware.AdminMiddleware(), controller.GetHistory)
+	r.GET("user", middleware.AuthMiddleware(), controller.GetHistoryUserId)
+	r.PATCH("/:id", middleware.AdminMiddleware(), controller.UpdateHistory)
 
 }
